--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -56,6 +56,8 @@ _add_test( kl_total )
 
 _add_test( kl_lambda )
 
+_add_test( kl_util )
+
 _add_test( kl_mem_constr )
 
 _add_test( merkle_hash_computer )
