--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -66,6 +66,8 @@ _add_test( merkle_hash_computer )
 
 #_add_test( merkle_hash_divider )
 
+_add_test( orbit_graph_processor )
+
 _add_test( eft_subgraph_scheduler )
 
 _add_test( wavefront_orbit_processor )
