--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -143,7 +143,7 @@ jobs:
     name: Build Docs
     runs-on: ubuntu-latest
     needs: [test_and_run, test_no_eigen]
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master' || github.event_name == 'pull_request'
 
     steps:
       - uses: actions/checkout@v3
