--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -137,13 +137,12 @@ jobs:
           path: build/test_results_no_eigen.xml
 
   # -------------------------------------------------
-  # 4. BUILD DOCUMENTATION (only on master)
+  # 4. BUILD DOCUMENTATION (only on master + PR)
   # -------------------------------------------------
   docs:
     name: Build Docs
     runs-on: ubuntu-latest
     needs: [test_and_run, test_no_eigen]
-    if: github.ref == 'refs/heads/master' || github.event_name == 'pull_request'
 
     steps:
       - uses: actions/checkout@v3
