--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
         run: cmake --build . -j$(nproc)
 
   # -------------------------------------------------
-  # 2. FULL BUILD + TEST + SIMPLE DAG RUN (RelWithDebInfo + Eigen)
+  # 2. FULL BUILD + TEST + SIMPLE DAG RUN + DOCS (RelWithDebInfo + Eigen)
   # -------------------------------------------------
   test_and_run:
     name: Build & Test (RelWithDebInfo + Eigen)
@@ -86,6 +86,18 @@ jobs:
             --Serial --GreedyBsp --BspLocking --GrowLocal --Variance --Cilk \
             --Etf --GreedyChildren --MultiHC --SarkarLockingHC \
             --GreedyChildrenKL --GrowLocalKL --GreedyBspHC --FunnelLocking
+
+      - name: Build documentation
+        run: |
+          cmake --build build --target doc
+          mkdir -p public
+          cp -r doc/html/* public
+
+      - name: Upload docs artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: docs
+          path: public
 
   # -------------------------------------------------
   # 3. FULL BUILD + TEST (RelWithDebInfo-noEigen)
@@ -135,34 +147,3 @@ jobs:
             --Serial --GreedyBsp --BspLocking --GrowLocal --Variance --Cilk \
             --Etf --GreedyChildren --MultiHC --SarkarLockingHC \
             --GreedyChildrenKL --GrowLocalKL --GreedyBspHC --FunnelLocking
-
-  # -------------------------------------------------
-  # 4. BUILD DOCUMENTATION (only on master)
-  # -------------------------------------------------
-  docs:
-    name: Build Docs
-    runs-on: ubuntu-latest
-    needs: [test_and_run, test_no_eigen]
-    if: github.ref == 'refs/heads/master'
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y --no-install-recommends \
-            doxygen graphviz libeigen3-dev cmake g++
-
-      - name: Build docs
-        run: |
-          cmake -S . -B build -DCMAKE_BUILD_TYPE=Release
-          cmake --build build --target doc
-          mkdir -p public
-          cp -r doc/html/* public
-
-      - name: Upload docs artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: docs
-          path: public
