--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     branches: [master]
   pull_request:
     branches: [master]
-    types: [opened, reopened, synchronize, ready_for_review]
+    types: [opened, closed, reopened, synchronize, ready_for_review]
 
 jobs:
   # -------------------------------------------------
