--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -50,6 +50,7 @@ endif()
 
 if (COPT_FOUND)
 _add_executable( ilp_bsp_scheduler )
+_add_executable( ilp_hypergraph_partitioner )
 endif()
 
 endif()
