Squashed commit of the following:
commit 3e0575f073123db174ebcb5f8572617eb6541c7d
Author: tonibohnlein <toni.boehnlein18@gmail.com>
Date:   Thu Oct 23 08:57:24 2025 +0200

    revision orbit graph processor

commit d810f9ea723cf146492078e77b6ccc26f56ca34f
Author: tonibohnlein <toni.boehnlein18@gmail.com>
Date:   Tue Oct 21 16:10:51 2025 +0200

    update fix greedy children

commit 2d82aa722d2275257755fe0e4420889766d9840f
Author: tonibohnlein <toni.boehnlein18@gmail.com>
Date:   Mon Oct 20 16:05:08 2025 +0200

    update merge rule

commit c38fba48899441df804fa3f706da7f06f966f57c
Author: tonibohnlein <toni.boehnlein18@gmail.com>
Date:   Mon Oct 20 14:47:34 2025 +0200

    greedyChildren update

commit deb8345872a2494d1e277527868ee0e2b5b96b5d
Author: tonibohnlein <toni.boehnlein18@gmail.com>
Date:   Mon Oct 20 09:26:31 2025 +0200

    IsomorphicSubGraphScheduler update, GreedyChildren node types

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -64,6 +64,8 @@ _add_test( kl_mem_constr )
 
 _add_test( isomorphic_subgraph_scheduler )
 
+_add_test( isomorphism_mapper )
+
 _add_test( merkle_hash_computer )
 
 #_add_test( merkle_hash_divider )
