Hypergraph partitioning enters OSP (#16)
* hypergraph first draft

* hypergraphs and partitioning, next version

* two kinds of vertex weights on hypergraphs

* templating the partitioning part

* hypergraph-partitioning-ILP app added

* FM fixes and recursive FM

* initialization in Hgraph partitioning app

* moving hypergraph utility functions into separate file

* added hyperdag template arguments

---------

Co-authored-by: tonibohnlein <toni.boehnlein18@gmail.com>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -92,6 +92,9 @@ _add_test( bsp_greedy_recomputer )
 ## pebbling model
 _add_test( pebbling_schedule_class )
 
+## partitioning model
+_add_test( hypergraph_and_partition )
+
 ## auxiliary
 _add_test( intpower )
 
@@ -119,6 +122,8 @@ _add_test( filereader DATA )
 if (COPT_FOUND)
 
 #_add_test( ilp_bsp_scheduler )
+
+#_add_test( ilp_hypergraph_partitioning )
 
 endif()
 
