--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -64,11 +64,11 @@ _add_test( kl_mem_constr )
 
 _add_test( isomorphic_subgraph_scheduler )
 
+_add_test( trimmed_group_scheduler )
+
 _add_test( isomorphism_mapper )
 
 _add_test( merkle_hash_computer )
-
-#_add_test( merkle_hash_divider )
 
 _add_test( orbit_graph_processor )
 
@@ -77,6 +77,11 @@ _add_test( eft_subgraph_scheduler )
 _add_test( wavefront_component_divider )
 
 _add_test( hill_climbing )
+
+# --- Standalone Debugging Executables ---
+add_executable(debug_merkle_divider debug_merkle_divider.cpp)
+target_link_libraries(debug_merkle_divider PRIVATE OneStopParallel ProjectExecutableFlags)
+
 
 ## bsp model
 _add_test( bsp_architecture )
