Sarkar simple buffer merges (#28)
* homogeneous buffer merges

* Added Buffer merge modes

* small fix

* simple in and out buffer merges

* update multilevel Sarkar

* Added reverse Fan Buffer to Full Buffer logic

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -103,6 +103,8 @@ _add_test( hypergraph_and_partition )
 ## auxiliary
 _add_test( intpower )
 
+_add_test( divisors )
+
 _add_test( uf_structures )
 
 _add_test( set_operations )
