--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,14 +40,14 @@ set(COMMON_CXX_WARNING_FLAGS
     "-Wunreachable-code"
     "-Wuninitialized"
     "-Wshadow"
-    "-Wfloat-equal"
-    "-Wnon-virtual-dtor"
-    "-pedantic"
-    "-Wpedantic"
-    "-Wold-style-cast"
-    "-Wcast-align"
-    "-Wduplicated-cond"
-    "-Wduplicated-branches"
+    # "-Wfloat-equal"
+    # "-Wnon-virtual-dtor"
+    # "-pedantic"
+    # "-Wpedantic"
+    # "-Wold-style-cast"
+    # "-Wcast-align"
+    # "-Wduplicated-cond"
+    # "-Wduplicated-branches"
     "-Werror"
 )
 
