--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,8 +40,8 @@ set(COMMON_CXX_WARNING_FLAGS
     "-Wunreachable-code"
     "-Wuninitialized"
     "-Wshadow"
-    # "-Wfloat-equal"
-    # "-Wnon-virtual-dtor"
+    "-Wfloat-equal"
+    "-Wnon-virtual-dtor"
     # "-pedantic"
     # "-Wpedantic"
     # "-Wold-style-cast"
